--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
         <div class="popup-image">
             <span>&times;</span>
+
+            <h1 class="imageId"></h1>
+            <button class="downloadImage" data-timer="10">Download Image
+            </button>
             <img src="" alt="">
         </div>
 
@@ -22,6 +26,7 @@
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
