update implement the download button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span>&times;</span>
 
             <h1 class="imageId"></h1>
-            <button class="downloadImage" data-timer="10">Download Image
+            <button class="downloadImage">Download Image
             </button>
             <img src="" alt="">
         </div>
