--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
     <div class="container">
         <h1>Image Gallery</h1>
         <div id="root" class="image-container"></div>
-
+        <div class="observed">Loading more...</div>
         <div class="popup-image">
             <span>&times;</span>
-
             <h1 class="imageId"></h1>
-            <button class="downloadImage">Download Image
-            </button>
+            <button class="downloadImage">Download Image</button>
             <img src="" alt="">
         </div>
-
     </div>
 
 
